workspaces/kubernetes-native-dxp/k8s/dxp/dxp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dxp-deployment
  labels:
    app: dxp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dxp
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: dxp
    spec:
      securityContext:
        runAsUser: 0
      containers:
        - name: dxp
          image: k8s-native-dxp
          imagePullPolicy: Never
          resources:
            limits:
              cpu: "4000m"
              memory: "8096Mi"
          livenessProbe:
            failureThreshold: 360
            httpGet:
              path: /c/portal/layout
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 30
          ports:
          - containerPort: 8080
          - containerPort: 8000
          - containerPort: 11311
          volumeMounts:
          - name: dxp-configmap
            mountPath: "/opt/liferay/osgi/configs"
            readOnly: true
          - name: dxp-logging-configmap
            mountPath: /opt/liferay/osgi/log4j
            readOnly: true
          - name: dxp-persistent-storage
            mountPath: "/opt/liferay/data"
      volumes:
        - name: dxp-configmap
          configMap:
            name: dxp-configmap
        - name: dxp-logging-configmap
          configMap:
            name: dxp-logging-configmap
        - name: dxp-persistent-storage
          persistentVolumeClaim:
            claimName: dxp-persistent-volume-claim
