workspaces/kubernetes-native-dxp/k8s/dxp/dxp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dxp-service
  labels:
    app: dxp
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: dxp
