workspaces/kubernetes-native-dxp/k8s/dxp/dxp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dxp-localhost
spec:
  ingressClassName: nginx
  rules:
  - host: dxp.localdev.me
    http:
      paths:
      - backend:
          service:
            name: dxp-service
            port:
              number: 80
        path: /
        pathType: Prefix
